# Desenvolvimento-Fullstack-Python-e-Django

./: README.md  comandos.txt
mysite/: build.sh  pyproject.toml
mysite/accounts/templates/accounts/: login.html
mysite/contacts/: urls.py  views.py
mysite/contacts/migrations/: 0001_initial.py
mysite/mysite/: settings.py  urls.py
mysite/polls/: apps.py  models.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_question_active.py  0003_alter_choice_options_alter_question_options_and_more.py
mysite/tests/: test_forms.py
mysite/tests/contacts/: test_views.py
mysite/tests/polls/: test_models.py
